--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -50,9 +50,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
 }
 
 .content {
@@ -116,13 +114,13 @@ p {
     font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
